# service_config_foundry

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TESTING.md  deploy_modern.bash  pyproject.toml  pytest.ini  release.bash  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  quick-test.yml  test.yml
service_config_foundry/: __init__.py  config_parser.py  file_type.py  service.py  service_location.py  utils.py
service_config_foundry/sections/: __init__.py  automount.py  install.py  mount.py  path.py  scope.py  service.py  slice.py  socket.py  swap.py  timer.py  unit.py
tests/: conftest.py  test_config_parser.py  test_file.py  test_file_type_pytest.py  test_integration.py  test_sections.py  test_service_location_pytest.py  test_service_pytest.py  test_utils.py
