[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "service_config_foundry"
description = "Helps create non-templated systemd services."
authors = [
    {name = "Yush Kapoor", email = "yushdotkapoor@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["systemd", "service", "linux", "system-administration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yushdotkapoor/service_config_foundry"
Repository = "https://github.com/yushdotkapoor/service_config_foundry"
"Bug Tracker" = "https://github.com/yushdotkapoor/service_config_foundry/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0", 
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0", 
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    "bump2version>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["service_config_foundry*"]

[tool.setuptools_scm]
# Automatic versioning from git tags
