[metadata]
name = service-config-foundry
version = 0.1
author = Yush Kapoor
author_email = yushdotkapoor@gmail.com
description = Helps create non-templated systemd services.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yushdotkapoor/service-config-foundry
project_urls =
    Bug Tracker = https://github.com/yushdotkapoor/service-config-foundry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Linux & Python users

[options]
packages = find:
python_requires = >=3.0
